# dockerbackup

./: Cargo.toml  README.md
.github/workflows/: binary-release.yml
src/: lib.rs  main.rs  notification.rs
src/backup/: backup_error.rs  backup_result.rs  destination.rs  logger.rs  mod.rs  notification.rs  utils.rs
tests/: Dockerfile  docker-compose.yml  setup.sh  test_script.sh
