[package]
name = "dockerbackup"
version = "2.1.0"
edition = "2021"
authors = ["Radek"]
license = "MIT OR Apache-2.0"
description = "This is a simple Docker backup tool. It allows you to automatically stop running containers and backup Docker volumes to local or remote destination."
readme = "README.md"
homepage = "https://github.com/radek00/dockerbackup"
repository = "https://github.com/radek00/dockerbackup"
keywords = ["cli", "backup", "docker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = "4.5.1"
ctrlc = "3.4.4"
crossterm = "0.28.1"
